data/derived/sp14/progs/unify/prog3670.ml.out
Characters 50-52:
  if List.length xs != 0 then xs.(0) + sumList(hd xs);;
                              ^^
Error: This expression has type 'a list
       but an expression was expected of type 'b array
